전 카테고리 시니어 레벨 보강 59개 파일
- SystemDesign 8개: 실무 실수 + 면접 Q&A 추가
- Architecture 4개: 실수 + 면접 추가
- Redis 7개: 극한 시나리오 3개씩 추가
- Java 23개: 면접 포인트 Q&A 5개씩 추가
- AI 2개: 극한 시나리오 추가
- Caching 3개: WHY 비교 추가
- Batch 3개: WHY 비교 추가

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>